[package]
name = "masto-to-tw"
description = "Sync Mastodon posts to Twitter."
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.31", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.14", default-features = false, features = ["io"] }
twapi-v2 = { version = "0.19.1", features = ["oauth10a", "upload"] }
worker = "0.5.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
