[package]
name = "masto-to-tw"
description = "Sync Mastodon posts to Twitter."
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.31", default-features = false }
getrandom = { version = "0.2.16", features = ["js"] }
reqwest = { version = "0.12.18", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["io"] }
twapi-v2 = { version = "0.14.2", features = ["oauth10a", "upload"] }
worker = "0.5.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
